[project]
name = "hive"
version = "0.1.0"
dependencies = [
    "websockets>=15.0.1",
    "pathfinding>=1.0.17",
    "pyglet>=2.1.6",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hive"]

[tool.pyright]
venvPath = "."
venv = ".venv"
